User johns
Data:

    Buffertime compile time configurable in ms.

Date: Sat Jan 21 15:49:16 CET 2012

    Release Version 0.4.0
    VDPAU: Add grab image support.
    VDPAU: Add auto-crop support.
    VDPAU: Changed OSD alpha calculation.
    Fix bug: Used VideoSharpen for denoise settings.
    Instant update deinterlace/... configuration changes.
    Fix bug: AudioExit called without AudioInit crash.

Date: Thu Jan 19 15:58:40 CET 2012

    Release Version 0.3.5
    OSD improvements:
    Use OSD size equal to video window.
    Update only dirty area(s) of OSD.
    Show/mix only used area of OSD.
    Fix bug: vpdau use previous resolution for deint, ...
    Fix software deinterlace with VA-API.
    Fix bug: transposed digits 567 should be 576.
    Audio module cleanup:
    Alsa + OSS can be included/build at the same time.
    Alsa or OSS can be runtime selected with -a.
    Add audio thread support to OSS module.
    Add polled audio support to alsa module.
    Removed some debug source code.

Date: Sun Jan 15 16:56:04 CET 2012

    Release Version 0.3.1
    Fix bug: AudioFreeBytes didn't check if audio running/compiled.
    Fix bug: snd_pcm_state: Assertion `pcm' failed.
    Add support for fullscreen and fullscreen toogle.
    Instant update deinterlace configuration changes.
    Fix subtitle position.
    Add SVDRP support.
    Suspend when user is inactive.

User Christian Rupper
Date: Tue Jan 10 22:33:14 CET 2012

    Move objects before $LIBS to avoid link failures with --as-needed.
    Do not override CFLAGS for video test.
    Rearrange *FLAGS incl. some minor fixes.
    Don't override VDRDIR, LIBDIR and TMPDIR in makefile.
    Don't abuse LDFLAGS in makefile.
    Define CC in makefile.
    Include GL/gl.h for the GL_COLOR_BUFFER_BIT definition.
    VideoInit() needs an argument.

User johns
Date: Tue Jan 10 22:32:50 CET 2012

    Add main menu entry, which suspends the plugin.
    Add support for resize window.